PHP EMS Tools

Changelog
------------------------------------------------------------

Release 2.1 -
- Added code to allow rig names and check data to be defined by user. Moved
this information to rigCheckData.php and added a require_once for this file in
custom.php. 
- Added rigCheckHandler.php to handle selection of different rigs and take the
user to the right page
- Changed link in index.php to point to rigCheckHandler.php
- Changed rigCheck.php and blankRigCheck.php to use a URL variable for the rig
number
- Moved all site-specific configuration to config/ directory. Kept custom.php
in place for reverse-compatibility. For old versions, move your existing
custom.php to config/config.php and then just bring everything else in and
change as needed.
- Change *all* includes which pointed to custom.php to now point to config/config.php
- Corrected stylesheet links in most of the roster pages, they had been
pointing to a deprecated "style.css", all should point to "php_ems.css".

Release 2 - 
- many sweeping changes, see CVS

Release 1.1 - 2006-11-16
- Fixed database bugs in authorization/login in rosterEdit.php and schedule.php
- Added project news feature.
- Added stylesheet to index.php
- Added checking for HTML directory in install-db.sh
- Added required file version.php


Release 1 - 2006-11-13
**Initial Release**