@@ -19,6 +19,10 @@ change as needed.
 - Change *all* includes which pointed to custom.php to now point to config/config.php
 - Corrected stylesheet links in most of the roster pages, they had been
 pointing to a deprecated "style.css", all should point to "php_ems.css".
+- moved some files to the admin/ directory to clean things up - files were
+checkMD5.php, makeMD5.php, rosterCheck.php, makeShowAs.php
+- moved some files to the inc/ directory to clean things up - files were
+global.php, notify.php, antman.php
 
 Release 2 - 
 - many sweeping changes, see CVS
